@@ -1,3 +1,15 @@
+Scarlet 1.3.0 Rework
+- Reworked Fade status
+    * Fade no longer forces movement when preventing direct hits.
+    * Fade no longer makes all attacks pierce.
+    * Fade no longer decrements when attacking.
+    * Lose 1 Fade at start of turn, unless Fade was spent on the previous turn.
+- Vanguard ship adjustments
+    * Initial Vanguard Berthing no longer grants 1 Energy Fragment.
+- Card adjustments
+    - Backstab
+        * Now mentions how much damage it would deal in its card description.
+        * Backstab B is now 2 energy (from 3).
 Scarlet 1.1.5 Playtest
 - Adjusted Vanguard ship starting cards
     * Now starts with the standard 2 Basic Attacks, 1 Basic Shield, 1 Basic Dodge.
